--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.5"
   }
 }
